# RustWasmMultithreadingHotswapExample

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
wasm_mt_hotswap_example/: .gitignore  Cargo.toml  index.html
wasm_mt_hotswap_example/public/: index.js  worker.js
wasm_mt_hotswap_example/src/: main.rs  pool.rs
